--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,41 +1,10 @@
-poliniexCurrencies {
-  ETH_BTC = "ETC_BTC"
-  LTC_BTC = "LTC_BTC"
-  XRP_BTC = "XRP_BTC"
-  FCT_BTC = "FCT_BTC"
-  BTS_BTC = "BTS_BTC"
-  STR_BTC = "STR_BTC"
-  XMR_BTC = "XMR_BTC"
-  DASH_BTC = "DASH_BTC"
-  MAID_BTC = "MAID_BTC"
-  DOGE_BTC = "DOGE_BTC"
-  CLAM_BTC = "CLAM_BTC"
+poloniexCurrencies {
+  BTC_ETH = "BTC_ETH"
+  BTC_USDT = "BTC_USDT"
+  BTC_XMR = "BTC_XMR"
 }
 
-btceCurrencies {
-  BTC_USD = "BTC_USD"
-  BTC_RUR = "BTC_RUR"
-  BTC_EUR = "BTC_EUR"
-  LTC_BTC = "LTC_BTC"
-  LTC_RUR = "LTC_RUR"
-  LTC_EUR = "LTC_EUR"
-  NMC_BTC = "NMC_BTC"
-  NMC_USD = "NMC_USD"
-  NVC_BTC = "NVC_BTC"
-  NVC_USD = "NVC_USD"
-  USD_RUR = "USD_RUR"
-  EUR_USD = "EUR_USD"
-  EUR_RUR = "EUR_RUR"
-  PPC_BTC = "PPC_BTC"
-  PPC_USD = "PPC_USD"
-  DSH_BTC = "DSH_BTC"
-  DSH_USD = "DSH_USD"
-  DSH_EUR = "DSH_EUR"
-  DSH_LTC = "DSH_LTC"
-  DSH_ETH = "DSH_ETH"
-  ETH_BTC = "ETH_BTC"
-  ETH_USD = "ETH_USD"
-  ETH_EUR = "ETH_EUR"
-  ETH_LTC = "ETH_LTC"
-  ETH_RUR = "ETH_RUR"
+kafkaConfs {
+  host = "localhost"
+  port = 9092
 }
